@@ -1,4 +1,4 @@
-Domotion v1.1.0
+Domotion v1.1.1
 
 Domotion Home Control and Automation
 ======== ==== ======= === ==========
